# fl-image-classification

./: .gitignore  LICENSE  projects.py
client/: edge_client.py  evaluator.py  runner.py
client/basic/: basic_client.py
client/micro/esp32/cifar10/: CMakeLists.txt  partitions.csv
client/micro/esp32/cifar10/main/: CMakeLists.txt  IO_manager.cc  IO_manager.h  Kconfig.projbuild  input_provider.cc  input_provider.h  main.cc  main_functions.cc  main_functions.h  model_info.h  model_provider.cc  model_provider.h  output_handler.cc  output_handler.h  wifi_manager.cc  wifi_manager.h
data/: loader.py  preprocessor.py
model/: edge.py  generator.py  model_data.py  optimizer.py  tuner.py  utilities.py
server/: fed_server.py  provider.py
training/: result.py  session.py  strategy.py
utils/: constants.py  custom_types.py  defaults.py
